# ml-inference-service

./: .gitignore  README.md  pyproject.toml  requirements.txt
models/: metrics.json
src/: app.py  config.py  predict.py  schema.py  train_model.py
tests/: test_health.py
