[project]
name = "ml-inference-service"
version = "0.1.0"
description = "ML Inference Service"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.6",
    "pydantic>=2.9.2",
    "pandas>=2.2.2",
    "scikit-learn>=1.5.2",
    "joblib>=1.4.2",
    "numpy>=2.1.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
